--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
+html{
+
+  --primary: #01192E;
+  --secondary: #21375C;
+  --secondary-blue: #626EE3;
+  --secondary-purple: #5E5EFB;
+  --light-purple: #EDBAFF;
+  --light-pink: #DEBAD6;
+  --yellow: #FEBE5F;
+  --green: #83B58E;
+  --red: #962B72;
+  --light-yellow: #F6DFC9;
+  --light-blue2: #b0c3fd;
+  --light-blue3: #e5ecfb;
+  --sky-blue: #f1f5ff;
+  --light-blue: #CBD0FF;
+  --active-black: #23221E;
+  --inactive-black: #343434;
+  --white: #ffffff;
+
+}
+
 .App {
   text-align: center;
+  font-family: Ubuntu;
+}
+.eLPooy{
+  background-color: var(--sky-blue) !important;
+}
+.eWjCzc{
+  border: none !important;
+  background-color:#DEBAD6 !important;
+  box-shadow: none !important;
+
+}
+.eAyARa {
+  box-shadow: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.krmNah{
+  background-color: #962B72 !important;
+  box-shadow: none !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.jhmYzC{
+  width: 60px !important;
+  height: 8px !important;
+  border-radius: 12px !important;
+  box-shadow: 0 0 1px 2px #DEBAD6 !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.guIbWC{
+  background-color: var(--sky-blue) !important;
 }
 
-.App-link {
-  color: #61dafb;
+.grUxXV{
+  background-color: var(--sky-blue) !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+:root{
+  --toastify-color-dark: #21375C !important;
+  --toastify-color-success: #5E5EFB !important; 
 }
